<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ash"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="00dp"
            android:layout_marginTop="5dp"
            android:background="#ffff5f"
            android:src="@drawable/nightmare" />
        <Button
            android:id="@+id/night"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string7"
            android:backgroundTint="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ash2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="00dp"
            android:layout_marginTop="5dp"
            android:background="#ffff5f"
            android:src="@drawable/error" />
        <Button
            android:id="@+id/error"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string8"
            android:backgroundTint="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/hundred"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="00dp"
            android:layout_marginTop="5dp"
            android:background="#ffff5f"
            android:src="@drawable/byebye" />
        <Button
            android:id="@+id/bye"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bye_bye_my_blue"
            android:backgroundTint="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/eded"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="00dp"
            android:layout_marginTop="5dp"
            android:background="#ffff5f"
            android:src="@drawable/beautiful" />
        <Button
            android:id="@+id/ed"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ed_sheeren_beautiful_people"
            android:backgroundTint="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>
</LinearLayout>