<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/changchang"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="00dp"
            android:layout_marginTop="5dp"
            android:background="#ffff5f"
            android:src="@drawable/selfmade" />
        <Button
            android:id="@+id/chang"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selfmade_orange"
            android:backgroundTint="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/loopy"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="00dp"
            android:layout_marginTop="5dp"
            android:background="#ffff5f"
            android:src="@drawable/internetwar" />
        <Button
            android:id="@+id/rupi"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string4"
            android:backgroundTint="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/nctnct"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="00dp"
            android:layout_marginTop="5dp"
            android:background="#ffff5f"
            android:src="@drawable/nct" />
        <Button
            android:id="@+id/nct"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string5"
         android:layout_marginLeft="15dp"
            android:backgroundTint="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/gang"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginLeft="00dp"
            android:layout_marginTop="5dp"
            android:background="#ffff5f"
            android:src="@drawable/gang" />
        <Button
            android:id="@+id/jaypack"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string6"
            android:backgroundTint="#ffffff"
            android:textSize="30sp"/>
    </LinearLayout>

</LinearLayout>